example/errors/lexer/raw_str_too_many_hashes.box
set x: str = r############################################################################################################################################################################################################################################################################################################"too fkin many"############################################################################################################################################################################################################################################################################################################;

println("down here");
